# akgentic-core

./: .gitignore  CONTRIBUTING.md  README.md  mix.exs  pyproject.toml  quick_start.py
.github/workflows/: ci.yml  release.yml
config/: config.exs
examples/: 01-hello-world.md  01_hello_world.exs  01_hello_world.py  02-request-response.md  02_request_response.exs  02_request_response.py  03-dynamic-agents.md  03_dynamic_agents.exs  03_dynamic_agents.py  04-stateful-agents.md  04_stateful_agents.exs  04_stateful_agents.py  05-multi-agent.md  05_multi_agent.exs  05_multi_agent.py  06-agent-cards.md  06_agent_cards.exs  06_agent_cards.py  README.md
lib/: akgentic.ex
lib/akgentic/: agent.ex  agent_card.ex  application.ex  event_subscriber.ex  messages.ex  orchestrator.ex  signal.ex  timer.ex  user_proxy.ex
lib/akgentic/messages/: orchestrator.ex
src/akgentic/: __init__.py  actor_address.py  actor_address_impl.py  actor_system_impl.py  agent.py  agent_card.py  agent_config.py  agent_state.py  orchestrator.py  user_proxy.py
src/akgentic/core/: __init__.py  actor_address.py  actor_address_impl.py  actor_system_impl.py  agent.py  agent_card.py  agent_config.py  agent_state.py  orchestrator.py  user_proxy.py
src/akgentic/core/diagnostics/: __init__.py  memory.py
src/akgentic/core/messages/: __init__.py  message.py  orchestrator.py
src/akgentic/core/utils/: __init__.py  deserializer.py  serializer.py
src/akgentic/messages/: __init__.py  message.py  orchestrator.py
src/akgentic/utils/: __init__.py  deserializer.py  serializer.py
test/: akgentic_test.exs
test/akgentic/: agent_card_test.exs  event_subscriber_test.exs  integration_test.exs  messages_test.exs  orchestrator_test.exs  public_api_test.exs  readme_quick_start_test.exs  signal_test.exs  timer_test.exs  user_proxy_test.exs
test/akgentic/messages/: orchestrator_test.exs
tests/: __init__.py  test_actor_address.py  test_actor_system_impl.py  test_agent.py  test_agent_config.py  test_diagnostics_memory.py  test_epic3_integration.py  test_init_llm_context.py  test_message.py  test_orchestrator.py  test_orchestrator_timer.py  test_package_init.py  test_public_api.py  test_readme_quick_start.py  test_serializer.py  test_timer_integration.py  test_user_proxy.py
tests/core/: test_actor_address.py  test_actor_identity.py  test_actor_system_impl.py  test_agent.py  test_agent_card.py  test_agent_card_config_coercion.py  test_agent_card_role_property.py  test_agent_config.py  test_agent_state.py  test_event_loop_drain.py  test_message.py  test_orchestrator.py  test_orchestrator_stop.py  test_orchestrator_timer.py  test_package_init.py  test_pykka_mailbox_drain_on_self_stop.py  test_serializer.py  test_user_proxy.py
tests/examples/: test_example_dynamic_agents.py  test_example_hello_world.py  test_example_multi_agent.py  test_example_request_response.py  test_example_stateful_agents.py
