[project]
name = "akgentic"
version = "1.0.0-alpha.1"
description = "Actor framework for building agent-based systems"
readme = "README.md"
authors = [
    { name = "gpiroux", email = "geoffroy.piroux@weareyuma.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "pykka>=4.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/akgentic"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["src/akgentic"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80

[tool.mypy]
python_version = "3.12"
strict = true
# warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "ASYNC"]
# ANN401: Allow Any type in serialization code (necessary for dynamic serialization)
# N802: Allow receiveMsg_* pattern (v1 Pykka message dispatch convention)
ignore = ["ANN401", "N802"]
