[project]
name = "akgentic-core"
version = "1.4.0"
description = "Actor framework for building agent-based systems"
readme = "README.md"
authors = [
    { name = "gpiroux", email = "geoffroy.piroux@weareyuma.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "pykka>=4.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.4.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/akgentic"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
# --timeout is a deadlock backstop, not a latency budget. The actor stop/teardown
# paths can wedge on a regression (a blocking ask on the actor thread waits forever);
# a finite per-test bound turns a true hang into a fast failure instead of a frozen
# suite. core is a pure-unit, no-LLM suite so the bound is generous purely as headroom.
# --timeout-method=thread dumps every thread's stack when it fires, pinpointing the wedge.
addopts = "--timeout=300 --timeout-method=thread"

[tool.coverage.run]
source = ["src/akgentic"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80

[tool.mypy]
python_version = "3.12"
strict = true
# warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# anyio is a transitive dep (pydantic-ai/httpx) reached only via a guarded,
# private import in agent.py; treat its absence/untyped internals as OK so
# strict mode does not fail when anyio is not directly installed (e.g. CI sync).
[[tool.mypy.overrides]]
module = ["anyio.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "ASYNC"]
# ANN401: Allow Any type in serialization code (necessary for dynamic serialization)
# N802: Allow receiveMsg_* pattern (v1 Pykka message dispatch convention)
ignore = ["ANN401", "N802"]
